# Nephyra

./: .gitignore  Cargo.toml  LICENSE  LICENSE-VCL1.0  README.md  build.fish  build.sh  build.zsh  plan.md
src/: main.rs
src/modules/: bootloader_check.rs  core.rs  hardware_info.rs  kernel_check.rs  package_check.rs  power_status.rs  system_report.rs
