[package]
name = "Nephyra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "*"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
dialoguer = "0.11"
toml = "0.8"